# paperlog

./: Cargo.toml  build.rs
scotland2/: Cargo.toml  build.rs
scotland2/scripts/: addr2line.ps1
scotland2/src/: lib.rs
src/logger/: logcat_logger.rs
