[package]
name = "paper2_scotland2"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
ctor = "0.2"
ndk-sys = "0.6.0"
paper2 = { path = "../", features = ["logcat", "ffi"] }
scotland2_rs = { git = "https://github.com/QuestPackageManager/scotland2_rs.git", tag = "v0.1.6" }
tracing-error = "0.2.1"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cdylib-link-lines = "0.1"

[profile.release]
debug = 2
opt-level = 0
lto = false
strip = false

[profile.dev]

opt-level = 0 
lto = false
strip = false